# Makefile-Tutorial

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c
src/add/: add.h
src/divide/: divide.c  divide.h
src/multiply/: multiply.c  multiply.h
src/subtract/: subtract.c  subtract.h
